# text-feature-span-extractor

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: 1.1.0_30531904920240731.pdf - PDF Source.json
data/logs/: report_2025-09-14T21-36-11-455723+00-00.json  version_log.jsonl
schema/: contract.invoice.json
scripts/: run_pipeline.py
seed_pdfs/: redacted-imagine-these-are-pdfs.md
src/invoices/: __init__.py  __main__.py  adaptive.py  api.py  api_models.py  calibration.py  candidates.py  cli.py  config.py  decoder.py  emit.py  exceptions.py  feature_prep.py  geometry.py  health.py  ingest.py  io_utils.py  labels.py  logging.py  metrics.py  normalize.py  orchestrator.py  paths.py  patterns.py  ranker.py  report.py  schema_registry.py  tokenize.py  train.py  utils.py  validation.py
src/invoices/azure/: __init__.py  base.py  config.py  dataverse.py  ledger.py  record_builder.py  sharepoint.py
src/invoices/candidates/: __init__.py  constants.py  features.py  generation.py  patterns.py  proximity.py  spans.py  validation.py
src/invoices/storage/: __init__.py  base.py  blob.py  local.py
tests/: test_api.py  test_api_security.py  test_azure_config.py  test_azure_connectors.py  test_blob_storage.py  test_candidate_bounds.py  test_contract_integrity.py  test_idempotency.py  test_label_alignment.py  test_ledger.py  test_mlflow_integration.py  test_orchestrator.py  test_pipeline_integration.py  test_ranker.py  test_record_builder.py  test_regression.py  test_review_queue.py  test_schema_registry.py  test_semantic_validation.py  test_storage.py  test_token_determinism.py
tests/fixtures/: ground_truth.json
tests/golden/: __init__.py  test_golden_outputs.py
tools/doccano/: config.json  readme-doccano.md  tasks_gen.py
tools/doccano/output/: generation_summary.json  tasks.json
