[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-feature-span-extractor"
version = "0.1.0"
description = "Deterministic text-layer feature-based span extractor for machine-generated PDF invoices"
authors = [
    {name = "Invoice System Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pdfplumber>=0.9.0",
    "pandas>=2.0.0",
    "pyarrow>=13.0.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.64.0",
    "scipy>=1.11.0",
    "xgboost>=2.0.0,<2.1",
    "doccano>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
run-pipeline = "invoices.cli:main"
invoicex = "invoices.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from within except - too noisy
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F841"]  # Allow unused variables in tests
"scripts/*" = ["F841", "B007"]  # Allow unused variables in scripts
