[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-feature-span-extract"
version = "0.2.0"
description = "Deterministic text-layer feature-based span extractor for machine-generated PDF invoices"
authors = [
    {name = "Invoice System Team"}
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pdfplumber>=0.9.0",
    "pdfminer.six>=20221105",  # direct import in tokenize.py (transitive via pdfplumber, but declare explicitly)
    "pandas>=2.0.0,<3.0",
    "pyarrow>=13.0.0",
    "numpy>=1.24.0,<3.0",
    "typer>=0.9.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.64.0",
    "scipy>=1.11.0",
    "xgboost>=2.0.0,<2.1",  # upper bound: 2.1 changed feature_names dtype, breaks our pipeline
    # API dependencies
    "fastapi>=0.115.0,<1.0",  # CVE-2024-47874 (Starlette DoS) fixed in 0.115.0
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0,<3.0",
    # HTTP client for Azure SDK
    "httpx>=0.25.0",
    # Metrics
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
azure = [
    # Azure SDK for SharePoint (Graph API), Dataverse, and Blob Storage
    "azure-identity>=1.16.1",  # CVE-2024-35255 fixed in 1.16.1
    "azure-storage-blob>=12.19.0",
]
mlflow = [
    "mlflow>=2.10.0,<3.0",
]

[project.scripts]
invoicex = "invoices.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
cache_dir = "/tmp/mypy_cache"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "pyarrow",
    "pyarrow.*",
    "tqdm",
    "tqdm.*",
    "mlflow",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
cache_dir = "/tmp/pytest_cache"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live Azure credentials (skipped by default)",
]

[tool.ruff]
line-length = 88
target-version = "py310"
cache-dir = "/tmp/ruff_cache"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from within except - too noisy
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F841", "B007"]  # Allow unused variables in scripts
